[gd_scene load_steps=18 format=3 uid="uid://dqsdhqpcd5hq6"]

[ext_resource type="Script" path="res://plugins/minigames/kernel_compiling/minigame.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cy4kcp2m25mc3" path="res://plugins/minigames/kernel_compiling/player_kernel_compiling.tscn" id="2"]
[ext_resource type="AudioStream" uid="uid://2cifdv5xa3b8" path="res://assets/music/minigames/Iamcompiling_master.ogg" id="3"]
[ext_resource type="PackedScene" uid="uid://jt7us5fj5t1k" path="res://plugins/minigames/kernel_compiling/room/room.glb" id="4"]
[ext_resource type="ArrayMesh" uid="uid://dngsl57llrrfp" path="res://assets/models/tree/tree.obj" id="7"]
[ext_resource type="PackedScene" uid="uid://bmdaus4pimoxb" path="res://common/scenes/countdown/countdown.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://oigcbugm06is" path="res://assets/textures/grass/grass_01.png" id="8_vt052"]
[ext_resource type="PackedScene" uid="uid://vkituo8tc8rf" path="res://plugins/minigames/kernel_compiling/screen/progress.glb" id="9"]
[ext_resource type="Texture2D" uid="uid://c0aubkywn5qqe" path="res://plugins/minigames/kernel_compiling/screen/fill.png" id="10"]
[ext_resource type="Shader" path="res://plugins/minigames/kernel_compiling/screen/progress.gdshader" id="11"]

[sub_resource type="ShaderMaterial" id="1"]
render_priority = 0
shader = ExtResource("11")
shader_parameter/percentage = 0.0
shader_parameter/full_tex = ExtResource("10")

[sub_resource type="ShaderMaterial" id="2"]
render_priority = 0
shader = ExtResource("11")
shader_parameter/percentage = 0.0
shader_parameter/full_tex = ExtResource("10")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ncn64"]
sky_top_color = Color(0.384314, 0.454902, 1, 1)
sky_horizon_color = Color(0.309804, 0.317647, 0.694118, 1)
ground_bottom_color = Color(0.133333, 0.388235, 0.0901961, 1)
ground_horizon_color = Color(0.2, 0.572549, 0.133333, 1)

[sub_resource type="Sky" id="3"]
sky_material = SubResource("ProceduralSkyMaterial_ncn64")

[sub_resource type="Environment" id="4"]
background_mode = 2
sky = SubResource("3")
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.25

[sub_resource type="PlaneMesh" id="5"]
size = Vector2(100, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ne6fr"]
albedo_texture = ExtResource("8_vt052")
uv1_scale = Vector3(5, 5, 5)

[node name="Node3D" type="Node3D"]
script = ExtResource("1")

[node name="Timer" type="Timer" parent="."]

[node name="Player1" parent="." instance=ExtResource("2")]
transform = Transform3D(0.173648, 0, -0.984808, 0, 1, 0, 0.984808, 0, 0.173648, 0, 0.05, -3)

[node name="Player2" parent="." instance=ExtResource("2")]
transform = Transform3D(0.0871556, 0, -0.996195, 0, 1, 0, 0.996195, 0, 0.0871556, 0.3, 0.05, -1)

[node name="Player3" parent="." instance=ExtResource("2")]
transform = Transform3D(-0.0871559, 0, -0.996195, 0, 1, 0, 0.996195, 0, -0.0871559, 0.3, 0.05, 1)

[node name="Player4" parent="." instance=ExtResource("2")]
transform = Transform3D(-0.173648, 0, -0.984808, 0, 1, 0, 0.984808, 0, -0.173648, 0, 0.05, 3)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.00174551, 0.173648, -0.984806, 0, 0.984808, 0.173648, 0.999998, 0.000303104, -0.00171899, -4.5, 2, 0)
current = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(-1.62921e-07, 0.5, -0.866025, 0, 0.866025, 0.5, 1, 8.14603e-08, -1.41093e-07, -4.2396, 4.2712, -1.92706)
light_energy = 0.3
shadow_enabled = true
omni_range = 20.0
omni_attenuation = 0.00285954
omni_shadow_mode = 0

[node name="Countdown" parent="." instance=ExtResource("8")]

[node name="room" parent="." instance=ExtResource("4")]

[node name="Team1Progress" parent="." instance=ExtResource("9")]
transform = Transform3D(0.043412, 0, -0.246202, 0, 0.25, 0, 0.246202, 0, 0.043412, -1.32076, 0.25, -1.78752)
visible = false

[node name="Sprite3D" type="Sprite3D" parent="Team1Progress"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.90735e-06, -0.711507, 0.966021)
material_override = SubResource("1")
pixel_size = 0.0035
texture = ExtResource("10")

[node name="Team2Progress" parent="." instance=ExtResource("9")]
transform = Transform3D(-0.0434121, 0, -0.246202, 0, 0.25, 0, 0.246202, 0, -0.0434121, -1.321, 0.25, 1.788)
visible = false

[node name="Sprite3D" type="Sprite3D" parent="Team2Progress"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.90735e-06, -0.711507, 0.966021)
material_override = SubResource("2")
pixel_size = 0.0035
texture = ExtResource("10")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("4")

[node name="MeshInstance2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01, 0)
mesh = SubResource("5")
surface_material_override/0 = SubResource("StandardMaterial3D_ne6fr")

[node name="MeshInstance3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 40, 0, -15)
mesh = ExtResource("7")

[node name="MeshInstance4" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 40, 0, -6.8)
mesh = ExtResource("7")

[node name="MeshInstance5" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 27.5, 0, -6.8)
mesh = ExtResource("7")

[node name="MeshInstance6" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 27.5, 0, -11.7)
mesh = ExtResource("7")

[node name="MeshInstance7" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 27.5, 0, 6)
mesh = ExtResource("7")

[node name="MeshInstance8" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 38.3, 0, 6)
mesh = ExtResource("7")

[node name="MeshInstance9" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 38.3, 0, 1.4)
mesh = ExtResource("7")

[node name="MeshInstance10" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 19.5, 0, 1.4)
mesh = ExtResource("7")

[node name="MeshInstance11" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 19.5, 0, 10.2)
mesh = ExtResource("7")

[node name="MeshInstance12" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 30.6, 0, 10.2)
mesh = ExtResource("7")

[node name="MeshInstance17" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 39.4, 0, 13.6)
mesh = ExtResource("7")

[node name="MeshInstance13" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 28.4, 0, 15.6)
mesh = ExtResource("7")

[node name="MeshInstance14" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 20.8, 0, 15.6)
mesh = ExtResource("7")

[node name="MeshInstance15" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 20.8, 0, -7.2)
mesh = ExtResource("7")

[node name="MeshInstance16" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 31.7, 0, -2.7)
mesh = ExtResource("7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3")
autoplay = true
bus = &"Music"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finish" from="Countdown" to="." method="_on_Countdown_finish"]
